<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <groupId>com.dp.plat</groupId>
    <artifactId>network-equipment-pms</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>network-equipment-pms</name>
    <description>Network Equipment Project Management System</description>

    <modules>
        <module>pms-common</module>
        <module>pms-system</module>
        <module>pms-project</module>
        <module>pms-asset</module>
        <module>pms-implementation</module>
        <module>pms-workflow</module>
        <module>pms-integration</module>
        <module>pms-governance</module>
        <module>pms-notification</module>
        <module>pms-file</module>
        <module>pms-lowcode</module>
        <module>pms-baseline</module>
        <module>pms-deliverable</module>
        <module>pms-admin</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mybatis-plus.version>3.5.5</mybatis-plus.version>
        <jjwt.version>0.12.5</jjwt.version>
        <springdoc.version>2.3.0</springdoc.version>
        <flowable.version>7.0.1</flowable.version>
        <mysql.version>8.3.0</mysql.version>
        <lombok.version>1.18.46</lombok.version>
        <easyexcel.version>3.3.4</easyexcel.version>
        <opentelemetry.version>1.40.0</opentelemetry.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 与 opentelemetry-spring-boot-starter 2.6.0 对齐。
                 Spring Boot 3.2 默认管理的 1.31.0 缺少该 Starter 需要的 ComponentLoader。 -->
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-bom</artifactId>
                <version>${opentelemetry.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-system</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-project</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-asset</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-implementation</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-workflow</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-integration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-governance</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-notification</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-file</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-lowcode</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-baseline</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dp.plat</groupId>
                <artifactId>pms-deliverable</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- MyBatis-Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- MySQL -->
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>

            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>

            <!-- SpringDoc OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- Flowable -->
            <dependency>
                <groupId>org.flowable</groupId>
                <artifactId>flowable-spring-boot-starter</artifactId>
                <version>${flowable.version}</version>
            </dependency>

            <!-- EasyExcel -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>UTF-8</encoding>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                    <executions>
                        <execution>
                            <id>default-testCompile</id>
                            <configuration>
                                <compilerArgs>
                                    <arg>-proc:none</arg>
                                </compilerArgs>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
